packages/social-trader/src/pages/trades/binance-trade-page/trading/order-book/order-book.module.scss
@import "~shared/styles/_sizes";

$order-book-row-height: 16px;

.order-book {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;

  &__current-price {
    font-family: "DIN Pro Regular", sans-serif;
    font-size: $font-size-xsmall;
  }

  &__table-block {
    height: 100%;
    display: flex;
    flex-direction: column;

    &--reverse {
      justify-content: flex-end;
    }
  }

  &__tables-row {
    height: 100%;
    overflow: hidden;
  }

  &__tables-block {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    height: 100%;
    width: 100%;
  }

  &__table {
    @include terminal-table(small);

    & td,
    th {
      width: 33.3%;
    }
    & th:last-child,
    & td:last-child {
      text-align: right;
    }
  }

  &__table-row {
    cursor: pointer;
    height: $order-book-row-height;

    &--hovered {
      background: rgba(255, 255, 255, 0.1);
    }
  }
}

